Fix alignment weirdness

--- a/src/site/_includes/css/styles.css
+++ b/src/site/_includes/css/styles.css
@@ -12431,9 +12431,9 @@ header nav li a {
   border-bottom: none;
 }
 
-header nav li a:hover {
+header nav li a:hover, header nav li a.active {
   border-bottom: 2px solid #3050CB;
-  padding-bottom: 1.75rem;
+  padding-bottom: 1.66rem;
 }
 
 @media (min-width: 640px) {
